--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Chris Diamand | Electric guitar and bass player</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,78 +24,76 @@
 		</nav>
 
 		<!-- Home -->
-		<article id="top" class="wrapper style2">
+		<article id="top" class="wrapper style4" style="background-image: url('images/dolo-iglesias-z9z6u1rn7sY-unsplash-monochrome.jpg')">
 			<div class="container">
 				<div class="row">
 					<div class="col-4 col-5-large col-12-medium">
-						<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+						<span class="image fit"><img src="images/wolfson_upright_square.jpg" alt="" /></span>
 					</div>
 					<div class="col-8 col-7-large col-12-medium">
 						<header>
-							<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+							<h1>Chris Diamand</h1>
 						</header>
-						<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-						<a href="#work" class="button large scrolly">Learn about what I do</a>
+						<header>
+							<h3>Guitar and bass player in Cambridge, UK</h3>
+						</header>
+						<p>
+							Chris is a versatile and experienced multi-instrumentalist based
+							just north of London.
+							In the past he's played everything from Bach to the Arctic
+							Monkeys, but recently most of his work has been jazz, funk,
+							neo-soul, or pop, usually on electric bass or guitar, although
+							he plays upright bass and piano as well.
+						</p>
+						<p>Chris' current bands include a jazz organ trio,
+							<a href="https://www.facebook.com/LCL.trio">LCL.trio</a>,
+							and function bands
+							<a href="https://www.facebook.com/ElementsLiveUK/">The Elements</a>
+							and The Messengers.
+						</p>
 					</div>
 				</div>
 			</div>
 		</article>
 
 		<!-- Media -->
-		<article id="media" class="wrapper style1">
+		<article id="media" class="wrapper style2">
 			<div class="container">
 				<header>
-					<h2>Here’s some stuff I made recently.</h2>
-					<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+					<h2>Media</h2>
 				</header>
+
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<h3><a href="#">Magna feugiat</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
+							<iframe src="https://www.youtube.com/embed/JafKJIXp-jQ" ></iframe>
+							<p>Real-time remote recording with Luke Pitzer on Organ during lockdown in 2020.</p>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<h3><a href="#">Veroeros primis</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
+							<iframe src="https://www.youtube.com/embed/tHVuoFJNkgU" ></iframe>
+							<p>A rehearsal take with my band, <a href="https://www.facebook.com/LCL.trio">LCL.trio</a>.</p>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<h3><a href="#">Lorem ipsum</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
+							<iframe src="https://www.youtube.com/embed/6snuUuwMklo"></iframe>
+							<p>Bass solo on "Strasbourg St. Denis" for an outdoor jazz gig.</p>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<h3><a href="#">Tempus dolore</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
+							<iframe src="https://www.youtube.com/embed/HMMwUgmmKww"></iframe>
+							<p>Playing piano with the Andy Bowie Quartet.</p>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<h3><a href="#">Feugiat aliquam</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
+							<iframe src="https://www.youtube.com/embed/vkyrkmkaaEU"></iframe>
+							<p>A multi-tracked lockdown recording project.</p>
 						</article>
 					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-							<h3><a href="#">Sed amet ornare</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
-						</article>
-					</div>
-				</div>
-				<footer>
-					<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-					<a href="#contact" class="button large scrolly">Get in touch with me</a>
-				</footer>
 			</div>
 		</article>
 
@@ -103,64 +101,35 @@
 		<article id="contact" class="wrapper style4">
 			<div class="container medium">
 				<header>
-					<h2>Have me make stuff for you.</h2>
-					<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+					<h2>Contact</h2>
+					<p>To book Chris or one of his bands for your event, please feel free to get in touch.</p>
 				</header>
 				<div class="row">
 					<div class="col-12">
-						<form method="post" action="#">
-							<div class="row">
-								<div class="col-6 col-12-small">
-									<input type="text" name="name" id="name" placeholder="Name" />
-								</div>
-								<div class="col-6 col-12-small">
-									<input type="text" name="email" id="email" placeholder="Email" />
-								</div>
-								<div class="col-12">
-									<input type="text" name="subject" id="subject" placeholder="Subject" />
-								</div>
-								<div class="col-12">
-									<textarea name="message" id="message" placeholder="Message"></textarea>
-								</div>
-								<div class="col-12">
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" /></li>
-										<li><input type="reset" value="Clear Form" class="alt" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</div>
-					<div class="col-12">
-						<hr />
-						<h3>Find me on ...</h3>
+						<h3>Email:</h3>
+						<p><a href="mailto:music@chrisdiamand.co.uk">music@chrisdiamand.co.uk</a></p>
+						<h3>Social:</h3>
 						<ul class="social">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<!--
-							<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-							<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-							<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-							<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-							<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-							<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-							<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-							-->
+							<li><a href="https://www.youtube.com/channel/UCz8M-J9cAN1qx85-2z1TTMw" class="icon brands fa-youtube"></a></li>
+							<li><a href="https://www.instagram.com/chrisd272/" class="icon brands fa-instagram"></a></li>
+							<li><a href="https://www.facebook.com/chris.diamand" class="icon brands fa-facebook-f"></a></li>
 						</ul>
 						<hr />
 					</div>
 				</div>
 				<footer>
-					<ul id="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+					<p id="copyright">&copy; Chris Diamand 2021. All rights reserved.</p>
+					<p id="copyright">Design based on Miniport by <a href="http://html5up.net">HTML5 UP</a></p>
+					<p id="copyright">
+						Background image by
+						<a href="https://unsplash.com/@dolodol?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dolo Iglesias</a>
+						on <a href="https://unsplash.com/s/photos/jazz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+					</p>
+					<p id="copyright">
+						Despite his unusually-spelled surname, Chris has a namesake in Tampa, Florida.
+						If you're looking for him, check him out
+						<a href="https://www.facebook.com/chrisdiamand12/">here</a>.
+					</p>
 				</footer>
 			</div>
 		</article>
