--- a/index.html
+++ b/index.html
@@ -65,35 +65,26 @@
 
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<iframe src="https://www.youtube.com/embed/JafKJIXp-jQ" ></iframe>
-							<p>Real-time remote recording with Luke Pitzer on Organ during lockdown in 2020.</p>
-						</article>
+						<iframe src="https://www.youtube.com/embed/JafKJIXp-jQ" ></iframe>
+						<p>Real-time remote recording with Luke Pitzer on Organ during lockdown in 2020.</p>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<iframe src="https://www.youtube.com/embed/tHVuoFJNkgU" ></iframe>
-							<p>A rehearsal take with my band, <a href="https://www.facebook.com/LCL.trio">LCL.trio</a>.</p>
-						</article>
+						<iframe src="https://www.youtube.com/embed/tHVuoFJNkgU" ></iframe>
+						<p>A rehearsal take with my band, <a href="https://www.facebook.com/LCL.trio">LCL.trio</a>.</p>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<iframe src="https://www.youtube.com/embed/6snuUuwMklo"></iframe>
-							<p>Bass solo on "Strasbourg St. Denis" for an outdoor jazz gig.</p>
-						</article>
+						<iframe src="https://www.youtube.com/embed/6snuUuwMklo"></iframe>
+						<p>Bass solo on "Strasbourg St. Denis" for an outdoor jazz gig.</p>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<iframe src="https://www.youtube.com/embed/HMMwUgmmKww"></iframe>
-							<p>Playing piano with the Andy Bowie Quartet.</p>
-						</article>
+						<iframe src="https://www.youtube.com/embed/HMMwUgmmKww"></iframe>
+						<p>Playing piano with the Andy Bowie Quartet.</p>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<iframe src="https://www.youtube.com/embed/vkyrkmkaaEU"></iframe>
-							<p>A multi-tracked lockdown recording project.</p>
-						</article>
+						<iframe src="https://www.youtube.com/embed/vkyrkmkaaEU"></iframe>
+						<p>A multi-tracked lockdown recording project.</p>
 					</div>
+				</div>
 			</div>
 		</article>
 
