Update instagram username

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<h3>Social:</h3>
 						<ul class="social">
 							<li><a href="https://www.youtube.com/channel/UCz8M-J9cAN1qx85-2z1TTMw" class="icon brands fa-youtube"></a></li>
-							<li><a href="https://www.instagram.com/chrisd272/" class="icon brands fa-instagram"></a></li>
+							<li><a href="https://www.instagram.com/chris.diamand" class="icon brands fa-instagram"></a></li>
 							<li><a href="https://www.facebook.com/chris.diamand" class="icon brands fa-facebook-f"></a></li>
 						</ul>
 						<hr />
