Push for github branch rename
Update copyright year.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					</div>
 				</div>
 				<footer>
-					<p id="copyright">&copy; Chris Diamand 2021. All rights reserved.</p>
+					<p id="copyright">&copy; Chris Diamand 2021-2022. All rights reserved.</p>
 					<p id="copyright">Design based on Miniport by <a href="http://html5up.net">HTML5 UP</a></p>
 					<p id="copyright">
 						Background image by
