--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<h1>Chris Diamand</h1>
 						</header>
 						<header>
-							<h3>Guitar and bass player in Cambridge, UK</h3>
+							<h3>Guitar and bass player</h3>
 						</header>
 						<p>
 							Chris is a versatile and experienced multi-instrumentalist based
