Move content into miniport/ subdir
This makes way for rewriting using a new template.

--- a/index.html
+++ b/index.html
@@ -1,137 +1,1 @@
-<!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Chris Diamand | Electric guitar and bass player</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="favicon.ico">
-	</head>
-	<body class="is-preload">
-
-		<!-- Nav -->
-		<nav id="nav">
-			<ul class="container">
-				<li><a href="#top">About</a></li>
-				<li><a href="#media">Media</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-
-		<!-- Home -->
-		<article id="top" class="wrapper style4" style="background-image: url('images/dolo-iglesias-z9z6u1rn7sY-unsplash-monochrome.jpg')">
-			<div class="container">
-				<div class="row">
-					<div class="col-4 col-5-large col-12-medium">
-						<span class="image fit"><img src="images/wolfson_upright_square.jpg" alt="" /></span>
-					</div>
-					<div class="col-8 col-7-large col-12-medium">
-						<header>
-							<h1>Chris Diamand</h1>
-						</header>
-						<header>
-							<h3>Guitar and bass player</h3>
-						</header>
-						<p>
-							Chris is a versatile and experienced multi-instrumentalist based
-							just north of London.
-							In the past he's played everything from Bach to the Arctic
-							Monkeys, but recently most of his work has been jazz, funk,
-							neo-soul, or pop, usually on electric bass or guitar, although
-							he plays upright bass and piano as well.
-						</p>
-						<p>Chris' current bands include a jazz organ trio,
-							<a href="https://www.facebook.com/LCL.trio">LCL.trio</a>,
-							and function bands
-							<a href="https://www.facebook.com/ElementsLiveUK/">The Elements</a>
-							and The Messengers.
-						</p>
-					</div>
-				</div>
-			</div>
-		</article>
-
-		<!-- Media -->
-		<article id="media" class="wrapper style2">
-			<div class="container">
-				<header>
-					<h2>Media</h2>
-				</header>
-
-				<div class="row">
-					<div class="col-4 col-6-medium col-12-small">
-						<iframe src="https://www.youtube.com/embed/JafKJIXp-jQ" ></iframe>
-						<p>Real-time remote recording with Luke Pitzer on Organ during lockdown in 2020.</p>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<iframe src="https://www.youtube.com/embed/tHVuoFJNkgU" ></iframe>
-						<p>A rehearsal take with my band, <a href="https://www.facebook.com/LCL.trio">LCL.trio</a>.</p>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<iframe src="https://www.youtube.com/embed/6snuUuwMklo"></iframe>
-						<p>Bass solo on "Strasbourg St. Denis" for an outdoor jazz gig.</p>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<iframe src="https://www.youtube.com/embed/HMMwUgmmKww"></iframe>
-						<p>Playing piano with the Andy Bowie Quartet.</p>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<iframe src="https://www.youtube.com/embed/vkyrkmkaaEU"></iframe>
-						<p>A multi-tracked lockdown recording project.</p>
-					</div>
-				</div>
-			</div>
-		</article>
-
-		<!-- Contact -->
-		<article id="contact" class="wrapper style4">
-			<div class="container medium">
-				<header>
-					<h2>Contact</h2>
-					<p>To book Chris or one of his bands for your event, please feel free to get in touch.</p>
-				</header>
-				<div class="row">
-					<div class="col-12">
-						<h3>Email:</h3>
-						<p><a href="mailto:music@chrisdiamand.co.uk">music@chrisdiamand.co.uk</a></p>
-						<h3>Social:</h3>
-						<ul class="social">
-							<li><a href="https://www.youtube.com/channel/UCz8M-J9cAN1qx85-2z1TTMw" class="icon brands fa-youtube"></a></li>
-							<li><a href="https://www.instagram.com/chris.diamand" class="icon brands fa-instagram"></a></li>
-							<li><a href="https://www.facebook.com/chris.diamand" class="icon brands fa-facebook-f"></a></li>
-						</ul>
-						<hr />
-					</div>
-				</div>
-				<footer>
-					<p id="copyright">&copy; Chris Diamand 2021-2022. All rights reserved.</p>
-					<p id="copyright">Design based on Miniport by <a href="http://html5up.net">HTML5 UP</a></p>
-					<p id="copyright">
-						Background image by
-						<a href="https://unsplash.com/@dolodol?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dolo Iglesias</a>
-						on <a href="https://unsplash.com/s/photos/jazz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-					</p>
-					<p id="copyright">
-						Despite his unusually-spelled surname, Chris has a namesake in Tampa, Florida.
-						If you're looking for him, check him out
-						<a href="https://www.facebook.com/chrisdiamand12/">here</a>.
-					</p>
-				</footer>
-			</div>
-		</article>
-
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+miniport/index.html
