Fill in titles and add old bio

--- a/index-solidstate.html
+++ b/index-solidstate.html
@@ -6,11 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Chris Diamand - Guitar | Bass | Double bass</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" href="favicon.ico">
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +20,7 @@
 
 			<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a href="index.html">Solid State</a></h1>
+				<h1><a href="index.html">Chris Diamand</a></h1>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -43,9 +44,8 @@
 			<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<div class="logo"><span class="icon fa-gem"></span></div>
-					<h2>This is Solid State</h2>
-					<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h2>Chris Diamand</h2>
+					<p>Guitar | Bass | Double Bass </p>
 				</div>
 			</section>
 
@@ -53,37 +53,26 @@
 			<section id="wrapper">
 
 				<!-- One -->
-				<section id="one" class="wrapper spotlight style1">
+				<section id="bio" class="wrapper spotlight style5">
 					<div class="inner">
 						<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h2 class="major">Magna arcu feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-							<a href="#" class="special">Learn more</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- Two -->
-				<section id="two" class="wrapper alt spotlight style2">
-					<div class="inner">
-						<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-						<div class="content">
-							<h2 class="major">Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-							<a href="#" class="special">Learn more</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- Three -->
-				<section id="three" class="wrapper spotlight style3">
-					<div class="inner">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-						<div class="content">
-							<h2 class="major">Nullam dignissim</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-							<a href="#" class="special">Learn more</a>
+							<h2 class="major">About</h2>
+							<p>
+								Chris is a versatile and experienced multi-instrumentalist based
+								just north of London.
+								In the past he's played everything from Bach to the Arctic
+								Monkeys, but recently most of his work has been jazz, funk,
+								neo-soul, or pop, usually on electric bass or guitar, although
+								he plays upright bass and piano as well.
+							</p>
+							<p>
+								Chris' current bands include a jazz organ trio,
+								<a href="https://www.facebook.com/LCL.trio">LCL.trio</a>,
+								and function bands
+								<a href="https://www.facebook.com/ElementsLiveUK/">The Elements</a>
+								and The Messengers.
+							</p>
 						</div>
 					</div>
 				</section>
