Copy over contact text from old site
Move social buttons into a div.

--- a/index-solidstate.html
+++ b/index-solidstate.html
@@ -119,14 +119,21 @@
 			<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
-					<h2 class="major">Get in touch</h2>
-					<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+					<h2 class="major">Contact</h2>
+					<p>To book Chris or one of his bands for your event, please feel free to get in touch.</p>
 
-					<ul class="social">
-						<li><a href="https://www.youtube.com/channel/UCz8M-J9cAN1qx85-2z1TTMw" class="icon brands fa-youtube"></a></li>
-						<li><a href="https://www.instagram.com/chris.diamand" class="icon brands fa-instagram"></a></li>
-						<li><a href="https://www.facebook.com/chris.diamand" class="icon brands fa-facebook-f"></a></li>
-					</ul>
+					<div class="row">
+						<div class="col-12">
+							<h3>Email</h3>
+							<p><a href="mailto:music@chrisdiamand.co.uk">music@chrisdiamand.co.uk</a></p>
+							<h3>Social</h3>
+							<ul class="social">
+								<li><a href="https://www.youtube.com/channel/UCz8M-J9cAN1qx85-2z1TTMw" class="icon brands fa-youtube"></a></li>
+								<li><a href="https://www.instagram.com/chris.diamand" class="icon brands fa-instagram"></a></li>
+								<li><a href="https://www.facebook.com/chris.diamand" class="icon brands fa-facebook-f"></a></li>
+							</ul>
+						</div>
+					</div>
 
 					<ul class="copyright">
 						<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
