Add copyright info to footer
Tweak the CSS a bit so that each list entry is on its own line.

--- a/index-solidstate.html
+++ b/index-solidstate.html
@@ -136,7 +136,27 @@
 					</div>
 
 					<ul class="copyright">
-						<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Chris Diamand 2021-2024. All rights reserved.</li>
+						<li>Design based on Solid State and Miniport templates by
+							<a href="http://html5up.net">HTML5 UP</a>
+						</li>
+						<li>
+							Background image by
+							<a
+								href="https://unsplash.com/@dolodol?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+								Dolo Iglesias
+							</a>
+							on
+							<a
+								href="https://unsplash.com/s/photos/jazz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+								Unsplash
+							</a>
+						</li>
+						<li id="copyright">
+							Despite his unusually-spelled surname, Chris has a namesake in Tampa, Florida.
+							If you're looking for him, check him out
+							<a href="https://www.facebook.com/chrisdiamand12/">here</a>.
+						</li>
 					</ul>
 				</div>
 			</section>
