Add info about some bands
Reduce corner radius on the pictures so they don't look silly with
different aspect ratios (rounded rectangles > ovals).

Remove the empty href from the image anchor tag in the "about"
(formerly "bio") section so that it can't be clicked on.

--- a/index-solidstate.html
+++ b/index-solidstate.html
@@ -53,9 +53,9 @@
 			<section id="wrapper">
 
 				<!-- One -->
-				<section id="bio" class="wrapper spotlight style5">
+				<section id="about" class="wrapper spotlight style1">
 					<div class="inner">
-						<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+						<a class="image"><img src="images/IMG_3688.jpg" alt="" /></a>
 						<div class="content">
 							<h2 class="major">About</h2>
 							<p>
@@ -73,6 +73,42 @@
 								<a href="https://www.facebook.com/ElementsLiveUK/">The Elements</a>
 								and The Messengers.
 							</p>
+						</div>
+					</div>
+				</section>
+
+				<section id="zgt" class="wrapper alt spotlight style2">
+					<div class="inner">
+						<a class="image"><img src="images/zgt.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">Zero Gravity Trio</h2>
+							<p>
+								The perfect blend of original funk, jazz and world music grooves, lyrical
+								melodies and virtuosic musicianship to massage your ears and get your feet
+								tapping. Featuring Tiago Coimbra on bass, Chris Diamand on guitar and Joe
+								Taylor on drums.
+							</p>
+							<a href="https://www.instagram.com/zerogravitytrio/" class="special">Instagram</a>
+						</div>
+					</div>
+				</section>
+
+				<section id="elements" class="wrapper spotlight style3">
+					<div class="inner">
+						<a class="image"><img src="images/elements.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">The Elements Function Band</h2>
+							<p>
+								The Elements are here to provide high-energy, high-quality
+								entertainment for whatever your celebration may be, and can
+								guarantee a great atmosphere for all age groups. Not sure? Take
+								a look at our testimonials on their
+								<a href="https://www.elementslive.co.uk/">website</a> or check
+								out the content on their
+								<a href="https://www.elementslive.co.uk/videos">videos</a>
+								page.
+							</p>
+							<a href="https://www.elementslive.co.uk/" class="special">Book now</a>
 						</div>
 					</div>
 				</section>
@@ -152,6 +188,14 @@
 								Unsplash
 							</a>
 						</li>
+						<li>
+							Portrait image by
+							<a
+								href="https://www.instagram.com/themusiciansphotographer/">
+								Olivia Da Costa
+							</a>
+						</li>
+
 						<li id="copyright">
 							Despite his unusually-spelled surname, Chris has a namesake in Tampa, Florida.
 							If you're looking for him, check him out
