Switch to new website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
-miniport/index.html
+<!DOCTYPE HTML>
+<!--
+	Solid State by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Chris Diamand - Guitar | Bass | Double bass</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" href="favicon.ico">
+	</head>
+	<body class="is-preload">
+
+		<!-- Page Wrapper -->
+		<div id="page-wrapper">
+
+			<!-- Header -->
+			<header id="header" class="alt">
+				<h1><a href="index.html">Chris Diamand</a></h1>
+				<nav>
+					<a href="#menu">Menu</a>
+				</nav>
+			</header>
+
+			<!-- Menu -->
+			<nav id="menu">
+				<div class="inner">
+					<h2>Menu</h2>
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="generic.html">Generic</a></li>
+						<li><a href="elements.html">Elements</a></li>
+						<li><a href="#">Log In</a></li>
+						<li><a href="#">Sign Up</a></li>
+					</ul>
+					<a href="#" class="close">Close</a>
+				</div>
+			</nav>
+
+			<!-- Banner -->
+			<section id="banner">
+				<div class="inner">
+					<h2>Chris Diamand</h2>
+					<p>Guitar | Bass | Double Bass </p>
+				</div>
+			</section>
+
+			<!-- Wrapper -->
+			<section id="wrapper">
+
+				<!-- One -->
+				<section id="about" class="wrapper spotlight style1">
+					<div class="inner">
+						<a class="image"><img src="images/IMG_3688.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">About</h2>
+							<p>
+								Chris is a versatile and experienced multi-instrumentalist based
+								just north of London.
+								In the past he's played everything from Bach to the Arctic
+								Monkeys, but recently most of his work has been jazz, funk,
+								neo-soul, or pop, usually on electric bass or guitar, although
+								he plays upright bass and piano as well.
+							</p>
+							<p>
+								Chris' current bands include a jazz organ trio,
+								<a href="https://www.facebook.com/LCL.trio">LCL.trio</a>,
+								and function bands
+								<a href="https://www.facebook.com/ElementsLiveUK/">The Elements</a>
+								and The Messengers.
+							</p>
+						</div>
+					</div>
+				</section>
+
+				<section id="zgt" class="wrapper alt spotlight style2">
+					<div class="inner">
+						<a class="image"><img src="images/zgt.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">Zero Gravity Trio</h2>
+							<p>
+								The perfect blend of original funk, jazz and world music grooves, lyrical
+								melodies and virtuosic musicianship to massage your ears and get your feet
+								tapping. Featuring Tiago Coimbra on bass, Chris Diamand on guitar and Joe
+								Taylor on drums.
+							</p>
+							<a href="https://www.instagram.com/zerogravitytrio/" class="special">Instagram</a>
+						</div>
+					</div>
+				</section>
+
+				<section id="elements" class="wrapper spotlight style3">
+					<div class="inner">
+						<a class="image"><img src="images/elements.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">The Elements Function Band</h2>
+							<p>
+								The Elements are here to provide high-energy, high-quality
+								entertainment for whatever your celebration may be, and can
+								guarantee a great atmosphere for all age groups. Not sure? Take
+								a look at our testimonials on their
+								<a href="https://www.elementslive.co.uk/">website</a> or check
+								out the content on their
+								<a href="https://www.elementslive.co.uk/videos">videos</a>
+								page.
+							</p>
+							<a href="https://www.elementslive.co.uk/" class="special">Book now</a>
+						</div>
+					</div>
+				</section>
+
+			</section> <!-- Wrapper -->
+
+			<!-- Footer -->
+			<section id="footer">
+				<div class="inner">
+					<h2 class="major">Contact</h2>
+					<p>To book Chris or one of his bands for your event, please feel free to get in touch.</p>
+
+					<div class="row">
+						<div class="col-12">
+							<h3>Email</h3>
+							<p><a href="mailto:music@chrisdiamand.co.uk">music@chrisdiamand.co.uk</a></p>
+							<h3>Social</h3>
+							<ul class="social">
+								<li><a href="https://www.youtube.com/channel/UCz8M-J9cAN1qx85-2z1TTMw" class="icon brands fa-youtube"></a></li>
+								<li><a href="https://www.instagram.com/chris.diamand" class="icon brands fa-instagram"></a></li>
+								<li><a href="https://www.facebook.com/chris.diamand" class="icon brands fa-facebook-f"></a></li>
+							</ul>
+						</div>
+					</div>
+
+					<ul class="copyright">
+						<li>&copy; Chris Diamand 2021-2024. All rights reserved.</li>
+						<li>Design based on Solid State and Miniport templates by
+							<a href="http://html5up.net">HTML5 UP</a>
+						</li>
+						<li>
+							Portrait image by
+							<a
+								href="https://www.instagram.com/themusiciansphotographer/">
+								Olivia Da Costa
+							</a>
+						</li>
+
+						<li id="copyright">
+							Despite his unusually-spelled surname, Chris has a namesake in Tampa, Florida.
+							If you're looking for him, check him out
+							<a href="https://www.facebook.com/chrisdiamand12/">here</a>.
+						</li>
+					</ul>
+				</div>
+			</section>
+
+		</div>
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
