Credit for ZGT image

--- a/index.html
+++ b/index.html
@@ -146,8 +146,14 @@
 								Olivia Da Costa
 							</a>
 						</li>
-
-						<li id="copyright">
+						<li>
+							Zero Gravity Trio image by
+							<a
+								href="https://www.instagram.com/alex_j_soprano/">
+								Alexandra Taylor
+							</a>
+						</li>
+						<li>
 							Despite his unusually-spelled surname, Chris has a namesake in Tampa, Florida.
 							If you're looking for him, check him out
 							<a href="https://www.facebook.com/chrisdiamand12/">here</a>.
