--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 				<div class="inner">
 					<h2>Menu</h2>
 					<ul class="links">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-						<li><a href="#">Log In</a></li>
-						<li><a href="#">Sign Up</a></li>
+						<li><a href="#">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#footer">Contact</a></li>
+						<li><a href="https://instagram.com/chris.diamand/">Instagram</a></li>
 					</ul>
 					<a href="#" class="close">Close</a>
 				</div>
