--- a/index.html
+++ b/index.html
@@ -58,20 +58,42 @@
 						<div class="content">
 							<h2 class="major">About</h2>
 							<p>
-								Chris is a versatile and experienced multi-instrumentalist based
-								just north of London.
-								In the past he's played everything from Bach to the Arctic
-								Monkeys, but recently most of his work has been jazz, funk,
-								neo-soul, or pop, usually on electric bass or guitar, although
-								he plays upright bass and piano as well.
+								Chris is a versatile bass and guitar player whose background
+								playing many different styles of music and on multiple
+								instruments, combined with exceptional listening skills, means
+								he is able to fit perfectly into any musical situation, as well
+								as giving him a unique voice in his own projects. He is
+								currently working on a debut trio EP exploring how the natural
+								resonances of the guitar interact with time, groove, and
+								texture across the diverse genres in which the guitar is used.
 							</p>
+
 							<p>
-								Chris' current bands include a jazz organ trio,
-								<a href="https://www.facebook.com/LCL.trio">LCL.trio</a>,
-								and function bands
-								<a href="https://www.facebook.com/ElementsLiveUK/">The Elements</a>
-								and The Messengers.
+								Born into a musical family, Chris was experimenting on his parents' piano as
+								soon as he could reach the keys. However, a knack for playing by ear meant
+								he preferred improvising to reading what was put in front of him, and as a
+								result he was fired by a succession of classical teachers until eventually
+								discovering jazz as a teenager, under the tutelage of Vicki Kenny. In the
+								meantime, he'd taught himself guitar, and played blues and rock alongside
+								studying jazz piano.
 							</p>
+
+							<p>
+								At university it became apparent that simply owning a bass guitar was enough to
+								get booked on it, so he started playing this too; eventually this became a
+								mainstay of Chris' musical exploits.
+							</p>
+
+							<p>
+								After graduating, he worked playing in jazz, funk, and pop bands, including
+								function gigs all over the country, Edinburgh and Cambridge jazz festivals, and
+								even a TV pilot for ITV, until in 2022 earning a scholarship to study a
+								Master's degree in Jazz Bass at the prestigious Royal Academy of Music. There
+								he has studied electric and double bass with Laurence Cottle, Jasper Hoiby, Tom
+								Herbert and Mike Mondesir, guitar with Chris Montague and John Parricelli, as
+								well as composition with the inimitable Pete Churchill.
+							</p>
+
 						</div>
 					</div>
 				</section>
