Reinstate media from old site

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<ul class="links">
 						<li><a href="#">Home</a></li>
 						<li><a href="#about">About</a></li>
+						<li><a href="#media">Media</a></li>
 						<li><a href="#footer">Contact</a></li>
 						<li><a href="https://instagram.com/chris.diamand/">Instagram</a></li>
 					</ul>
@@ -133,6 +134,38 @@
 						</div>
 					</div>
 				</section>
+
+				<section id="media" class="wrapper alt style1">
+					<div class="inner">
+						<h2 class="major">Media</h2>
+						<center>
+							<div class="row">
+								<div class="col-4 col-6-medium col-12-small">
+									<iframe src="https://www.youtube.com/embed/JafKJIXp-jQ" ></iframe>
+									<p>Real-time remote recording with Luke Pitzer on Organ during lockdown in 2020.</p>
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<iframe src="https://www.youtube.com/embed/tHVuoFJNkgU" ></iframe>
+									<p>A rehearsal take with my band, <a href="https://www.facebook.com/LCL.trio">LCL.trio</a>.</p>
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<iframe src="https://www.youtube.com/embed/6snuUuwMklo"></iframe>
+									<p>Bass solo on "Strasbourg St. Denis" for an outdoor jazz gig.</p>
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<iframe src="https://www.youtube.com/embed/HMMwUgmmKww"></iframe>
+									<p>Playing piano with the Andy Bowie Quartet.</p>
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<iframe src="https://www.youtube.com/embed/vkyrkmkaaEU"></iframe>
+									<p>A multi-tracked lockdown recording project.</p>
+								</div>
+							</div>
+						</center>
+					</div>
+				</section>
+
+			</section>
 
 			</section> <!-- Wrapper -->
 
