--- a/index.html
+++ b/index.html
@@ -141,24 +141,12 @@
 						<center>
 							<div class="row">
 								<div class="col-4 col-6-medium col-12-small">
-									<iframe src="https://www.youtube.com/embed/JafKJIXp-jQ" ></iframe>
-									<p>Real-time remote recording with Luke Pitzer on Organ during lockdown in 2020.</p>
+									<iframe src="https://www.youtube.com/embed/H4hPznvIA0M" ></iframe>
+									<p>Lady Bird (Tadd Dameron)</p>
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
-									<iframe src="https://www.youtube.com/embed/tHVuoFJNkgU" ></iframe>
-									<p>A rehearsal take with my band, <a href="https://www.facebook.com/LCL.trio">LCL.trio</a>.</p>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<iframe src="https://www.youtube.com/embed/6snuUuwMklo"></iframe>
-									<p>Bass solo on "Strasbourg St. Denis" for an outdoor jazz gig.</p>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<iframe src="https://www.youtube.com/embed/HMMwUgmmKww"></iframe>
-									<p>Playing piano with the Andy Bowie Quartet.</p>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<iframe src="https://www.youtube.com/embed/vkyrkmkaaEU"></iframe>
-									<p>A multi-tracked lockdown recording project.</p>
+									<iframe src="https://www.youtube.com/embed/NdnK7PtitUU" ></iframe>
+									<p>The Elements Function Band</p>
 								</div>
 							</div>
 						</center>
