Add Watford Jazz Junction photo
(c) Robert Crowley.

--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
 							</a>
 						</li>
 						<li>
+							Watford Jazz Junction image by
+							<a
+									href="https://www.robertcrowleyphotography.com/">
+								Robert Crowley
+							</a>
+						</li>
+						<li>
 							Despite his unusually-spelled surname, Chris has a namesake in Tampa, Florida.
 							If you're looking for him, check him out
 							<a href="https://www.facebook.com/chrisdiamand12/">here</a>.
