Add Evans/Diamand Trio section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,29 @@
 					</div>
 				</section>
 
-				<section id="elements" class="wrapper alt spotlight style4">
+				<section id="evansdiamand" class="wrapper alt spotlight style4">
+					<div class="inner">
+						<a class="image"><img src="images/evansdiamandtrio2.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">Evans/Diamand Trio</h2>
+							<p>
+								Formed in 2022 after meeting at the Royal Academy of Music, the
+								Evans/Diamand trio brings together Leeds-born brothers Jonah
+								and Toby Evans, on drums and guitar respectively, and electric
+								bassist Chris Diamand.
+
+								While rooted in a contemporary jazz sense of melody and
+								harmony, the band's original compositions are presented through
+								a lens tinted by blues and alt-rock influences, resulting in a
+								unique sound defined by impressionistic drumming and
+								layered chordal textures from the guitar and bass.
+							</p>
+							<a href="https://youtu.be/dXQYSCZZis0" class="special">Listen</a>
+						</div>
+					</div>
+				</section>
+
+				<section id="elements" class="wrapper spotlight style5">
 					<div class="inner">
 						<a class="image"><img src="images/elements.jpg" alt="" /></a>
 						<div class="content">
@@ -157,11 +179,15 @@
 					</div>
 				</section>
 
-				<section id="media" class="wrapper style1">
+				<section id="media" class="wrapper alt style1">
 					<div class="inner">
 						<h2 class="major">Media</h2>
 						<center>
 							<div class="row">
+								<div class="col-4 col-6-medium col-12-small">
+									<iframe src="https://www.youtube.com/embed/dXQYSCZZis0" ></iframe>
+									<p>Evans/Diamand Trio Showreel</p>
+								</div>
 								<div class="col-4 col-6-medium col-12-small">
 									<iframe src="https://www.youtube.com/embed/K2CXnBj5bCs" ></iframe>
 									<p>Oscar Lyons Quartet at Watford Jazz Junction</p>
@@ -230,6 +256,13 @@
 							<a
 									href="https://www.robertcrowleyphotography.com/">
 								Robert Crowley
+							</a>
+						</li>
+						<li>
+							Evans/Diamand Trio image by
+							<a
+									href="http://www.ashleybonfante.com">
+								Ashley Bonfante
 							</a>
 						</li>
 						<li>
