--- a/index.html
+++ b/index.html
@@ -59,42 +59,26 @@
 						<div class="content">
 							<h2 class="major">About</h2>
 							<p>
-								Chris is a versatile bass and guitar player whose background
-								playing many different styles of music and on multiple
-								instruments, combined with exceptional listening skills, means
-								he is able to fit perfectly into any musical situation, as well
-								as giving him a unique voice in his own projects. He is
-								currently working on a debut trio EP exploring how the natural
-								resonances of the guitar interact with time, groove, and
-								texture across the diverse genres in which the guitar is used.
+								Chris Diamand is a versatile and experienced musician, whose
+								background playing many different styles on multiple
+								instruments gives him a unique voice within the ensembles he
+								plays in. He has a particular interest in exploring the
+								intersection of written and improvised music, especially in the
+								context of jazz, both straight-ahead and in jazz-adjacent
+								styles.
 							</p>
-
 							<p>
-								Born into a musical family, Chris was experimenting on his parents' piano as
-								soon as he could reach the keys. However, a knack for playing by ear meant
-								he preferred improvising to reading what was put in front of him, and as a
-								result he was fired by a succession of classical teachers until eventually
-								discovering jazz as a teenager, under the tutelage of Vicki Kenny. In the
-								meantime, he'd taught himself guitar, and played blues and rock alongside
-								studying jazz piano.
+								Current original projects include the more contemporary
+								Evans/Diamand Trio on electric bass, fusion band
+								<a href="https://zerogravitytrio.com">Zero Gravity Trio</a> on
+								guitar, as well a brand new Big Band writing collaboration with
+								Italian pianist
+								<a href="https://www.lorenzobellinimusic.com/">Lorenzo Bellini</a>.
+								He also regularly performs with guitarist
+								<a href="https://www.tedmorcaldimusic.com/">Ted Morcaldi</a> on the
+								double bass, as well as playing guitar on soul singer Gina
+								Sedman’s recent UK tour.
 							</p>
-
-							<p>
-								At university it became apparent that simply owning a bass guitar was enough to
-								get booked on it, so he started playing this too; eventually this became a
-								mainstay of Chris' musical exploits.
-							</p>
-
-							<p>
-								After graduating, he worked playing in jazz, funk, and pop bands, including
-								function gigs all over the country, Edinburgh and Cambridge jazz festivals, and
-								even a TV pilot for ITV, until in 2022 earning a scholarship to study a
-								Master's degree in Jazz Bass at the prestigious Royal Academy of Music. There
-								he has studied electric and double bass with Laurence Cottle, Jasper Hoiby, Tom
-								Herbert and Mike Mondesir, guitar with Chris Montague and John Parricelli, as
-								well as composition with the inimitable Pete Churchill.
-							</p>
-
 						</div>
 					</div>
 				</section>
