--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 								tapping. Featuring Tiago Coimbra on bass, Chris Diamand on guitar and Joe
 								Taylor on drums.
 							</p>
+							<p>
+								The trio's debut single "Bicipital Groove" is out 21st November - presave it now!
+							</p>
+							<a href="https://artists.landr.com/057914006543" class="special">Presave!</a>
+							<a href="https://zerogravitytrio.com" class="special">Website</a>
 							<a href="https://www.instagram.com/zerogravitytrio/" class="special">Instagram</a>
 						</div>
 					</div>
