Use newer version of promo video

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								unique sound defined by impressionistic drumming and
 								layered chordal textures from the guitar and bass.
 							</p>
-							<a href="https://youtu.be/dXQYSCZZis0" class="special">Listen</a>
+							<a href="https://youtu.be/X8sgsf1h0Ew" class="special">Listen</a>
 						</div>
 					</div>
 				</section>
